# Python_Project

./: #For Loop in Python.py  #Randomization  #Rock, Paper, Scissors Game:.py  #Treasure Island.py  README.md  Text_encryption.py  project-1-pig.py  requirements.txt
.github/100 Days Python Coding/: Capstone Project 1  Capstone Project 2.py  Day 1 python coding.py  Day 10 python coding.py  Day 12 python coding.py  Day 13 python coding.py  Day 2 python coding.py  (+9 more)
Algebra/: Cholesky.py  Gauss.py  function_to_graph.py  graphing_calculator.py  simple_calculator.py  slope_intecept.py
BBClassify/: BB-Classify.py  LICENSE.md  README.md  fletgui.py
Neuronal-Red/: README.md  temperature_prediction.ipynb  temperature_prediction.py
Password_Manager/: README.md  main.py  master.key  password.csv  passwords.db  project.py  pyproject.toml  requirements.txt
Snake/: README.md  data.json  main.py
Stock-Analysis/: .gitignore  README.md  app.py  bist_scrape_symbols.py  data_processor.py  fetch_stocks.py  load_stocks.py  new.csv  plot_stocks.py  requirements.txt  symbols.csv
Stock-Analysis -Python-Script/: requirements.txt
Whatsapp Chats Sentiment Analysis/: README.md  Whatsapp Chats Sentiment Analysis.ipynb
guessing-game/: README.md  guessing-game.py
magic-8-ball/: README.md  main.py
magic8ball/: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.bat  start.sh
rock-paper-scissors/: README.md  rock_paper_scissors.py
tictactoe/: README.md  game_play.py  runner.py  test_tictactoe.py  tictactoe.py
(+19 files in other folders)
